--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             <div class="container-project">
                 <div class="row1-project">
                     <div class="img-box">
-                        <img src="./image/bjio.png" alt="">
+                        <a href="https://nile-ore.github.io/bjio/"> <img src="./image/bjio.png" alt=""> </a>
                     </div>
                     <div class="text-box text-grey">
                         <h2 class="lg-heading text-black"> </h2>
