--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 
-    <title>Portfolio | Ludiflex</title>
+    <title>Portfolio</title>
 </head>
 <body>
    <div class="container">
@@ -231,13 +231,8 @@
 
     </div>
 
-
-
-
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
     <script src="https://unpkg.com/scrollreveal"></script>
-
     <script src="assets/js/main.js"></script>
 </body>
 </html>
